Atualiza informações pessoais e melhora a responsividade da seção inicial: altera nome, ajusta o link para download do CV e modifica estilos para melhor apresentação em dispositivos móveis.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <!--header-->
     <header class="active">
-        <a href="#" class="logo">Renan.</a>
+        <a href="#" class="logo">Renan Marques Santos</a>
 
         <!-- <i class='bx bx-menu' id="menu-icon"></i> -->
 
@@ -46,8 +46,8 @@
     <!--home section-->
     <section id="home" class="home active">
         <div class="home-detail">
-            <h1>Renan M Santos</h1>
-            <h2>Eu sou um Programador
+            <h1>Renan.</h1>
+            <h2>Programador
                 <span style="--i:4;" data-text="Front-End">Front-End</span>
                 <span style="--i:3;" data-text="Back-End">Back-End</span>
                 <span style="--i:2;" data-text="Full-Stack">Full-Stack</span>
@@ -60,7 +60,7 @@
                     Full Stack no futuro,
                     sempre buscando criar soluções eficientes e de qualidade".</p>
                 <div class="btn-sci">
-                    <a href="#" class="btn">Download CV</a>
+                    <a href="img/curriculo.pdf" class="btn" download>Download CV</a>
                     <div class="sci">
                         <a href="https://www.youtube.com/watch?v=vekQe58apUE&t=3527s"><i class='bx bxl-youtube'></i></a>
                         <a href="https://www.instagram.com/renan.marquezz?igsh=MXdlMno5OXZoNXl6ag=="><i
@@ -74,7 +74,7 @@
         <diz class="home-img">
             <div class="img-box">
                 <diz class="img-item">
-                    <img src="imge/renan10.png" alt="">
+                    <img src="imge/renan.png" alt="">
                 </diz>
             </div>
         </diz>
