Atualiza link para download do CV: altera o caminho do arquivo para a nova versão do currículo.

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     Full Stack no futuro,
                     sempre buscando criar soluções eficientes e de qualidade".</p>
                 <div class="btn-sci">
-                    <a href="img/curriculo.pdf" class="btn" download>Download CV</a>
+                    <a href="imge/CVNOVO2025-26.pdf" class="btn" download>Download CV</a>
                     <div class="sci">
                         <a href="https://www.youtube.com/watch?v=vekQe58apUE&t=3527s"><i class='bx bxl-youtube'></i></a>
                         <a href="https://www.instagram.com/renan.marquezz?igsh=MXdlMno5OXZoNXl6ag=="><i
