--- a/index.html
+++ b/index.html
@@ -179,8 +179,7 @@
                             <p class="year">01/2024 - 01/2025</p>
                             <h3>Front-End Developer Site</h3>
                             <p class="company">Empresa: Ricio Consultas.</p>
-                            <p style="margin-top: 1px;">Desenvolveu interfaces responsivas com HTML, CSS e JS,
-                                integrando APIs REST e otimizando.</p>
+                            <p style="margin-top: 1px;">Desenvolveu interfaces responsivas com HTML, CSS e JS, integrando APIs REST e otimizando.</p>
                         </div>
 
                         <div class="resume-item">
