Atualiza descrições das experiências profissionais no currículo, substituindo textos genéricos por informações específicas sobre cursos e certificações.

--- a/index.html
+++ b/index.html
@@ -223,14 +223,14 @@
                             <p class="year">05/2025 - Carga Horária: 8h</p>
                             <h3>Ka Solution</h3>
                             <p class="company">Certificado: Microsoft (AZ-900) </p>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quos.</p>
+                            <p>Fundamentos de computação em nuvem com foco na plataforma Azure.</p>
                         </div>
 
                         <div class="resume-item">
                             <p class="year">09/2024 - Carga Horária: 8h</p>
                             <h3>Ka Solution</h3>
                             <p class="company">Certificado: SAP S/4HANA.</p>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quos.</p>
+                            <p> Introdução à plataforma de ERP empresarial da SAP.</p>
 
 
                         </div>
@@ -239,35 +239,35 @@
                             <p class="year">07/2024 - Carga Horária: 25h 34m</p>
                             <h3>Udemy</h3>
                             <p class="company">Certificado: C# LINQ Net 7.0 Net 8.0.</p>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quos.</p>
+                            <p>Manipulação de dados com eficiência utilizando LINQ em aplicações modernas.</p>
                         </div>
 
                         <div class="resume-item">
                             <p class="year">06/2024 - Carga Horária: 12h 34m</p>
                             <h3>Udemy</h3>
                             <p class="company">Certificado: React.js.</p>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quos.</p>
+                            <p>Criação de interfaces web interativas e reativas com a biblioteca JavaScript mais popular do mercado.</p>
                         </div>
 
                         <div class="resume-item">
                             <p class="year">03/2023 - Carga Horária: 54h 5m</p>
                             <h3>Udemy</h3>
                             <p class="company">Certificado: Java Completo 2023</p>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quos.</p>
+                            <p>Programação orientada a objetos e fundamentos robustos da linguagem Java.</p>
 
                         </div>
                         <div class="resume-item">
                             <p class="year">03/2010 - Carga Horária: 60h </p>
                             <h3>Campu class</h3>
                             <p class="company">Certificado: Lógica de Dados.</p>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quos.</p>
+                            <p>Princípios fundamentais para a organização e estruturação de dados.</p>
                         </div>
 
                         <div class="resume-item">
                             <p class="year">03/2010 - Carga Horária: 40h </p>
                             <h3>Campu class</h3>
                             <p class="company">Certificado: SQL Server - I e II</p>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quos.</p>
+                            <p>Manipulação, consultas e gerenciamento de banco de dados relacionais com SQL Server.</p>
                         </div>
                     </div>
                 </div>
