Atualiza imagem na seção inicial e ajusta estilo de posicionamento para melhor apresentação.

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <diz class="home-img">
             <div class="img-box">
                 <diz class="img-item">
-                    <img src="imge/renan.png" alt="">
+                    <img src="imge/renannovo.png" alt="">
                 </diz>
             </div>
         </diz>
